[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilsos-downloader"
version = "0.1.0"
description = ""
authors = [{ name = "Dylan Pederson", email = "contact@landlordmapper.org" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "curl-cffi>=0.12.0",
  "tenacity>=9.1.2",
]

[project.scripts]
ilsos-downloader = "main:main"

[tool.setuptools]
py-modules = ["main", "utils"]
